cluster/gitops/backup/tape-archiver/web/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tape-archiver
spec:
  hostnames:
    - tape-archiver.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: tape-archiver-web
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
